<resources>
    <string name="app_name">Projet TFT</string>
    <string name="description_text">Description</string>
    <string name="title_text">Example application</string>
    <string name="todo_text">TODO</string>
    <string name="return_text">return</string>
    <string name="champion_name">Champion Name</string>
    <string name="champion_coast">champion Coast</string>
    <string name="champion_class">champion Class</string>
    <string name="my_team_Button">My team</string>
    <string name="add_button">Add to team</string>
    <string name="button_reset">Reset Team</string>
</resources>
